--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -17,5 +18,7 @@
             <li><a href='#'>Services</a>/li>
         </ul>
     </nav>
+
+    <footer></footer>
 </body>
 </html>
